examples/tests/snapshots/19_overworld__headless_snapshot.snap
---
source: examples/tests/19_overworld.rs
expression: "support::headless_snapshot::<Overworld>(1)"
---
·(365,·86)··Stonemere·(City)··--·arrows·pan,·R·rer
▲▲▲▲▲▲▲▲▲▲▲▲""""","·",""""",,,,""",...≈~~≈≈≈~~≈~~~
"""∩"▲▲▲▲▲▲▲∩∩,,",,"·",",,""","",,,.≈≈≈≈~~~~~~~≈≈≈
"∩∩"""▲▲▲▲▲""",,,,""·,",,"*,,"",",.≈≈≈≈≈≈~≈≈≈~≈≈..
""∩"∩∩∩▲▲∩∩"",",",",·",".*,""",*,.≈≈≈≈~≈≈≈~≈~≈≈:,"
∩"∩""""∩∩∩""∩,"",".,,·"",",,"",,:≈~~≈~~≈~~~~≈~:",,
""""∩"""""∩"*",,,"",",·,",""",,".≈~≈≈≈~~≈≈~~~.,",,
"""∩""∩∩"","",,.",,,,,,·,"""""".≈~≈≈≈≈~≈≈~~≈:""".,
▲▲"∩"""∩∩"♠,,"""",,,"""·,"","".≈≈≈≈≈≈≈~~~~≈≈.,,",,
▲▲▲∩"∩""""♣♠♠♣♣♣,,"",,"·""".,".≈≈≈~~~~~~~≈≈..,,,."
▲▲▲▲"""∩∩∩"♠♣♣♣♠♣♣"".""·",,"".≈≈≈≈~~~~~~~.,,,""Φ,"
▲▲▲▲∩""∩"∩♠♠♠♠♣♣♠♠",,,.·,,,,,.~~≈~≈~≈~≈≈."",","","
▲▲▲∩∩∩"∩""∩♠♠♠♣♠♣♣",,",·",,",≈~~≈≈≈≈≈~~:,,""".*","
∩∩∩∩∩∩"""""♣♣♠♠♠♣♣♣*,,"·,■"".≈≈~≈≈≈≈~..",,,,,,","·
∩∩"""∩"∩∩∩""♠♣♣♣♣♠♣","·".··".≈≈~≈~≈≈..",.,""""""·"
∩♠∩"∩""∩"∩"∩♣♠♣♣♠♠♠♠,·,*·,,·.~~≈~≈..*,.",,".",,·""
♣♠♣♠♣♠♠,*""""♠♣♠♠♣♣♠·,*,·","·≈≈≈...",",",""",.""·,
♠♣♣♣♣♠♠,""∩""∩"♣♠♠♠♠·","·,,..·..",,,,.",,,","",",·
♣♣♠♠♣♠"∩""∩∩""""♣♠♣"·,","·":..·,".",""",,*,,,,,,"·
♣♣♠♠♠∩∩∩∩"∩∩"∩∩"♠""·,,"",·,.:..·,,,,",,"..,,,.,,",
♠♠♠♣∩"∩"""""""∩,",,"·,.",·",...,·",,.,"""","".,,,·
♣♠♠♠∩∩""""∩"""∩"""""·",,"·,*..,,"·,",,,.,,",""",·,
♣♣♣♠"""∩""""""",,,,·"."""·"""""","·,,,,,*"",,·,⌂,,
♣♠♠♣♣""∩∩""∩""∩","·",,"""·.,,,,"",,·,,,"",",·,·"",
♠♣♠♣♠"""∩"∩"∩"",",·,""""·,,,",,,,,",·,,"",,·,,",""
