examples/tests/snapshots/19_overworld__hex_tile_view_snapshot.snap
---
source: examples/tests/19_overworld.rs
expression: "views.last().expect(\"at least one frame\")"
---
····································~··~~··~~··~······················┌───────··OVERWORLD··────────┐
···░·····∩·∩·······▲··▲··▲·▲··▲····▲··~··~·▲·······░··░··≈·≈··≈····≈··│seed·2··(365,·86)···········│
············································~··~······················│The·Misty·Lowlands··········│
·····░·░··░····∩··∩··▲·▲·······▲T····▲·▲··▲····∩··∩··░·░·······≈·····≈│Stonemere·(City)············│
············································~··~······················│elevation·~43%··············│
···∩··∩··░·░··░····▲·····▲·▲·······▲··▲··▲·▲··▲····░·····≈·≈·······≈··│view:·hex·tiles·[T]·········│
······································································│····························│
··∩··∩·∩·······.·····∩·∩··∩····∩··∩··▲·▲·······▲·····.·.⌂·.····≈··≈··≈│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀+───────+│
······································································│·▀▀·▀··▀▀▀·▀··▀▀·▀▀│▀▀·····││
···∩·····.·.·······.··.··"·"··"····∩··~··~·▲·······"··"··≈·≈··≈····≈··│·▀·▀▀▀·▀▀··▀▀▀·▀▀▀▀│▀▀▀▀▀·▀││
····································~··~~··~··························│·▀▀▀▀▀▀▀▀▀·▀··▀▀▀··│▀▀▀▀▀▀▀││
·····♠·♠··♠····▲··▲··"·"·······"⌂····∩·∩··∩····"··"··≈·≈·······≈·····≈│·▀▀··▀▀▀▀·▀▀▀▀▀▀·▀·│··▀··▀·││
······································································│·▀·▀▀▀▀▀▀▀▀·▀▀▀▀▀▀▀│··▀▀▀▀▀││
···∩··∩··∩·∩··∩····▲·····∩·∩·······∩··∩··"·"♦·"····.Θ····≈·≈·······≈··│·▀▀▀▀▀▀▀▀··▀·▀▀▀··▀+───────+│
······································································│·▀▀▀▀·▀▀▀·▀▀▀▀▀▀▀▀··▀▀▀·▀▀▀▀│
··♠··♠·♠·······∩·····∩·∩··∩····"··"··"·"·······≈·····≈·≈⌂·≈····≈··≈··≈│·▀▀▀▀·▀▀▀▀▀··▀▀▀▀▀·▀▀▀▀▀·▀▀▀│
······································································│·▀···▀▀▀··▀··▀▀▀▀▀▀▀▀·▀▀▀▀▀▀│
···♠··~··~·∩·······∩··∩··∩·∩··∩····"■····≈·≈·······"⌂·"··≈·≈··≈····≈··│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
~··~··································································│····························│
·····∩·∩··∩····♠··♠··♠·♠Ω······∩·····"·"··"····"⌂·"··"·"·······≈·····≈│Legend······················│
······································································│≈·Deep·ocean················│
···"··"··♠·♠π·♠····♠·····∩·∩·······"··"··"·"··"····"·····≈·≈·······≈··│~·River·····················│
······································································│,·Plains····················│
♦·∩··♠·♠·······♠·····♠·♠··♠····♠⌂·♠··"·"·······"·····≈·≈··≈····≈··≈··≈│♣·Forest····················│
······································································│"·Hills·····················│
···♠·····♠·♠·······≈··≈··♠·♠··♠····∩·····∩·∩Ω······∩··∩··≈·≈··≈····≈··│▲·Mountains·················│
······································································│▲·Snowcap···················│
·····♠·♠··♠····:··:··≈·≈·······♠·····∩·∩··∩····∩··∩··≈·≈·······≈·····≈│.·Desert····················│
······································································│,·Savanna···················│
···♠··♠··♠·♠··♠····♠·····♠·♠·······♠··♠··∩·∩··∩····∩·····≈·≈·······≈··│····························│
······································································│drag·pans,·T·tiles,·R·reroll│
··♠··:·:·······♠·····♣·♣··♣····♠··♠··♠·♠⌂······▲·····∩·∩♦·∩····≈··≈··≈└────────────────────────────┘
