examples/tests/snapshots/19_overworld__png_snapshot.snap
---
source: examples/tests/19_overworld.rs
expression: png
extension: png
snapshot_kind: binary
---
