examples/tests/snapshots/19_overworld__square_tile_view_snapshot.snap
---
source: examples/tests/19_overworld.rs
expression: "views.last().expect(\"at least one frame\")"
---
······································································┌───────··OVERWORLD··────────┐
···∩·······.·······.··.····"··"····∩·······▲·······"··"····≈··≈····≈··│seed·2··(365,·86)···········│
·········.···············"·············~~▲···············≈············│The·Misty·Lowlands··········│
···································~··································│Stonemere·(City)············│
···································~··································│elevation·~43%··············│
···∩··∩····♠··♠····"·······"·······"⌂·"····∩··∩····"·······≈·······≈··│view:·square·tiles·[T]······│
·∩···············"···············"···············"···············≈····│····························│
······································································│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
······································································│·▀▀·▀··▀▀▀·▀··▀▀·▀▀▀▀▀······│
···∩··∩····∩··∩····▲·······∩·······∩··∩····"♦·"····.Θ······≈·······≈··│·▀·▀▀▀·▀▀··▀▀▀·▀▀▀▀+───────+│
·········∩···············∩···············"···············≈············│·▀▀▀▀▀▀▀▀▀·▀··▀▀▀··│▀▀▀▀▀▀▀││
······································································│·▀▀··▀▀▀▀·▀▀▀▀▀▀·▀·│··▀··▀·││
······································································│·▀·▀▀▀▀▀▀▀▀·▀▀▀▀▀▀▀+───────+│
···♠·······∩·······∩··∩····▲··▲····"·······"·······"⌂·"····≈··≈····≈··│·▀▀▀▀▀▀▀▀··▀·▀▀▀··▀▀·▀▀·▀▀▀▀│
·♠···············∩···············"···············"···············≈····│·▀▀▀▀·▀▀▀·▀▀▀▀▀▀▀▀··▀▀▀·▀▀▀▀│
······································································│·▀▀▀▀·▀▀▀▀▀··▀▀▀▀▀·▀▀▀▀▀·▀▀▀│
······································································│·▀···▀▀▀··▀··▀▀▀▀▀▀▀▀·▀▀▀▀▀▀│
···♠·······∩·······∩··∩····∩··∩····"■······≈·······"⌂·"····≈··≈····≈··│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
·······~~∩···············∩···············≈···············≈············│····························│
···~··································································│Legend······················│
···~··································································│≈·Deep·ocean················│
···∩··∩····∩··∩····♠Ω······♠·······"··"····"··"····"⌂······≈·······≈··│~·River·····················│
·∩···············♠···············"···············"···············≈····│,·Plains····················│
······································································│♣·Forest····················│
······································································│"·Hills·····················│
···"··"····♠π·♠····♠·······∩·······"··"····"··"····"·······≈·······≈··│▲·Mountains·················│
·········♠···············∩···············"···············≈············│▲·Snowcap···················│
······································································│.·Desert····················│
······································································│,·Savanna···················│
···♠·······♠·······♠··♠····♠··♠····"⌂······"·······"··"····≈··≈····≈··│····························│
·♠···············♠···············"···············"···············≈····│drag·pans,·T·tiles,·R·reroll│
······································································└────────────────────────────┘
