examples/tests/snapshots/19_overworld__wide_layout_snapshot.snap
---
source: examples/tests/19_overworld.rs
expression: view
---
▲▲▲▲▲∩""""""""""""∩"∩▲∩""",.·,"""""""∩∩"∩".,,,,,",",,...~≈≈~~~~≈:...≈≈┌───────··OVERWORLD··────────┐
▲▲▲▲▲▲""∩▲▲▲▲∩∩∩"""∩"▲∩""".,·,,,,,,"",",",,",,,,,"":...~~~~~≈~~≈..",.~│seed·2··(365,·86)···········│
▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲∩""","·,,,",.",",,,,,".,,",:≈~≈~≈~~≈≈≈≈≈≈..*,.≈│The·Misty·Lowlands··········│
▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲∩",,""·,",","""""","""","..≈~≈≈≈≈~≈~~≈≈≈~.*",.≈│Stonemere·(City)············│
▲▲▲""▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲""""","·",""""",,,,""",...≈~~≈≈≈~~≈~~~~≈..."*,.≈│elevation·~43%··············│
∩∩""∩"▲▲▲""""∩"▲▲▲▲▲▲▲∩∩,,",,"·",",,""","",,,.≈≈≈≈~~~~~~~≈≈≈.:.",⌂","≈│····························│
"∩"""∩""∩""∩∩"""▲▲▲▲▲""",,,,""·,",,"*,,"",",.≈≈≈≈≈≈~≈≈≈~≈≈..,"",·"·""≈│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
"""""""∩"∩""∩"∩∩∩▲▲∩∩"",",",",·",".*,""",*,.≈≈≈≈~≈≈≈~≈~≈≈:,"","·,,·,,≈│·▀▀·▀··▀▀▀·▀··▀▀·▀▀▀▀▀······│
""""∩"""""∩"∩""""∩∩∩""∩,"",".,,·"",",,"",,:≈~~≈~~≈~~~~≈~:",,""·,,·",..│·▀·▀▀▀·▀▀··▀▀▀·▀▀▀▀·▀▀▀▀▀·▀▀│
"∩"""∩∩∩""""""∩"""""∩"*",,,"",",·,",""",,".≈~≈≈≈~~≈≈~~~.,",,,,"·,·,,".│·▀▀▀▀▀▀▀▀▀·▀··▀▀▀···▀▀+───+▀│
"""∩"""∩"∩"""∩""∩∩"","",,.",,,,,,·,"""""".≈~≈≈≈≈~≈≈~~≈:""".,,""·,·.",.│·▀▀··▀▀▀▀·▀▀▀▀▀▀·▀·▀··+───+▀│
∩""""∩"∩▲▲▲▲"∩"""∩∩"♠,,"""",,,"""·,"","".≈≈≈≈≈≈≈~~~~≈≈.,,",,,"·".·""":│·▀·▀▀▀▀▀▀▀▀·▀▀▀▀▀▀▀···▀▀▀▀▀▀│
∩"∩∩"""▲▲▲▲▲▲∩"∩""""♣♠♠♣♣♣,,"",,"·""".,".≈≈≈~~~~~~~≈≈..,,,."",·"""·",,│·▀▀▀▀▀▀▀▀··▀·▀▀▀··▀▀·▀▀·▀▀▀▀│
""∩∩""∩▲▲▲▲▲▲▲"""∩∩∩"♠♣♣♣♠♣♣"".""·",,"".≈≈≈≈~~~~~~~.,,,""Φ,""·,,,,"·,,│·▀▀▀▀·▀▀▀·▀▀▀▀▀▀▀▀··▀▀▀·▀▀▀▀│
"""∩""∩▲▲▲▲▲▲▲∩""∩"∩♠♠♠♠♣♣♠♠",,,.·,,,,,.~~≈~≈~≈~≈≈."",","",",·"",",·,"│·▀▀▀▀·▀▀▀▀▀··▀▀▀▀▀·▀▀▀▀▀·▀▀▀│
"∩∩"""∩"▲▲▲▲▲∩∩∩"∩""∩♠♠♠♣♠♣♣",,",·",,",≈~~≈≈≈≈≈~~:,,""".*","·,,",",,⌂"│·▀···▀▀▀··▀··▀▀▀▀▀▀▀▀·▀▀▀▀▀▀│
"""∩"∩""""∩∩∩∩∩∩"""""♣♣♠♠♠♣♣♣*,,"·,■"".≈≈~≈≈≈≈~..",,,,,,","·,".,,""".,│·▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀│
∩""∩"∩""""∩∩"""∩"∩∩∩""♠♣♣♣♣♠♣","·".··".≈≈~≈~≈≈..",.,""""""·",",,,,"*"*│····························│
♠"""""♣♠♣♣∩♠∩"∩""∩"∩"∩♣♠♣♣♠♠♠♠,·,*·,,·.~~≈~≈..*,.",,".",,·"""",,,"""",│Legend······················│
♣♣♠♣♠♣♣♣♠♣♣♠♣♠♣♠♠,*""""♠♣♠♠♣♣♠·,*,·","·≈≈≈...",",",""",.""·,"..,,""","│≈·Deep·ocean················│
♣♠♣♣♠♠♣♣♠♠♠♣♣♣♣♠♠,""∩""∩"♣♠♠♠♠·","·,,..·..",,,,.",,,","",",·,"",,,"","│~·River·····················│
♣♣♣♠♣♣♠♣♣♣♣♣♠♠♣♠"∩""∩∩""""♣♠♣"·,","·":..·,".",""",,*,,,,,,"·,",,"",""*│,·Plains····················│
♠♣♠♣♠♠♠♠♣♣♣♣♠♠♠∩∩∩∩"∩∩"∩∩"♠""·,,"",·,.:..·,,,,",,"..,,,.,,",·,,,,,,"",│♣·Forest····················│
♣♠♠♣♠♠♠♠♠♠♠♠♠♣∩"∩"""""""∩,",,"·,.",·",...,·",,.,"""","".,,,·",,,",",,,│"·Hills·····················│
♠♠♠♣♣♣♣♠♣♠♣♠♠♠∩∩""""∩"""∩"""""·",,"·,*..,,"·,",,,.,,",""",·,,",,"",",,│▲·Mountains·················│
♣♣♣♠♠♣♣♣♣♣♣♣♣♠"""∩""""""",,,,·"."""·"""""","·,,,,,*"",,·,⌂,,","""",,",│▲·Snowcap···················│
♠♣♠♣♣♣♠♠♣♠♣♠♠♣♣""∩∩""∩""∩","·",,"""·.,,,,"",,·,,,"",",·,·"","",*,,,"",│.·Desert····················│
♣♠♠♠♣♠♠♠♠♠♠♣♠♣♠"""∩"∩"∩"",",·,""""·,,,",,,,,",·,,"",,·,,",""",""",,"".│,·Savanna···················│
♠♠♠♠♠♠♠♠♠♣♠♣♣♣♣"∩∩∩"""∩""",,,·.,"·""",",,""","*·"","·"""",".",,",,","≈│♠·Jungle····················│
♠♣♣♣♣♣♠♣♠♣♠♠♠♠"∩""∩""""∩,,,,"·."·",",,"",,","","·""·,∩,..,,,","""."""≈│····························│
♠♣♣♣♠♠♠♣♠♣♠♣♣∩∩"∩"∩""∩""♣,,,,·,·,",,,",,,,",,",""··""∩,,",,,",,"","":≈│arrows/drag·pan,·R·rerolls··│
♠♠♠♣♠♣♠♣♠♣♠♠♠∩"""∩∩∩"∩∩",".,.··"",,,""",,,,,""".""",∩",.,"""",,,,,,"≈~└────────────────────────────┘
